<resources>
    <string name="app_name" translatable="false">GraphMaker</string>
    <!-- General -->
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="image_save">Save</string>
    <string name="save_success">Image saved</string>
    <string name="save_error">Error while saving image</string>
    <string name="main_url">Enter a start.gg url</string>
    <string name="api_error_message">Unable to recover data</string>
    <!-- Navigation -->
    <string name="new_graph">New graph</string>
    <string name="graph_generate">Generate</string>
    <!-- Graph parameters -->
    <string name="graph_title">Title</string>
    <string name="graph_date">Date</string>
    <string name="graph_location">Location</string>
    <string name="graph_entrants">Entrants</string>
    <!-- Player parameters -->
    <string name="player_pseudo">Pseudo</string>
    <string name="player_team">Team</string>
    <string name="player_character">Character</string>

    <!-- Characters Name -->
    <string name="character_mario">mario</string>
    <string name="character_donkey_kong">donkey kong</string>
    <string name="character_link">link</string>
    <string name="character_samus">samus</string>
    <string name="character_dark_samus">dark samus</string>
    <string name="character_yoshi">yoshi</string>
    <string name="character_kirby">kirby</string>
    <string name="character_fox">fox</string>
    <string name="character_pikachu">pikachu</string>
    <string name="character_luigi">luigi</string>
    <string name="character_ness">ness</string>
    <string name="character_captain_falcon">captain falcon</string>
    <string name="character_jigglypuff">jigglypuff</string>
    <string name="character_peach">peach</string>
    <string name="character_daisy">daisy</string>
    <string name="character_bowser">bowser</string>
    <string name="character_ice_climbers">ice climbers</string>
    <string name="character_sheik">sheik</string>
    <string name="character_zelda">zelda</string>
    <string name="character_dr_mario">dr.mario</string>
    <string name="character_pichu">pichu</string>
    <string name="character_falco">falco</string>
    <string name="character_marth">marth</string>
    <string name="character_lucina">lucina</string>
    <string name="character_young_link">young link</string>
    <string name="character_ganondorf">ganondorf</string>
    <string name="character_mewtwo">mewtwo</string>
    <string name="character_roy">roy</string>
    <string name="character_chrom">chrom</string>
    <string name="character_mr_game_and_watch">mr.game and watch</string>
    <string name="character_meta_knight">meta knight</string>
    <string name="character_pit">pit</string>
    <string name="character_dark_pit">dark pit</string>
    <string name="character_zero_suit_samus">zero suit samus</string>
    <string name="character_wario">wario</string>
    <string name="character_snake">snake</string>
    <string name="character_ike">ike</string>
    <string name="character_pokemon_trainer">pokémon trainer</string>
    <string name="character_diddy_kong">diddy kong</string>
    <string name="character_lucas">lucas</string>
    <string name="character_sonic">sonic</string>
    <string name="character_king_dedede">king dedede</string>
    <string name="character_olimar">olimar</string>
    <string name="character_lucario">lucario</string>
    <string name="character_rob">r.o.b.</string>
    <string name="character_toon_link">toon link</string>
    <string name="character_wolf">wolf</string>
    <string name="character_villager">villager</string>
    <string name="character_mega_man">mega man</string>
    <string name="character_wii_fit_trainer">wii fit trainer</string>
    <string name="character_rosalina_and_luma">rosalina and luma</string>
    <string name="character_little_mac">little mac</string>
    <string name="character_greninja">greninja</string>
    <string name="character_mii_brawler">mii brawler</string>
    <string name="character_mii_swordfighter">mii swordfighter</string>
    <string name="character_mii_gunner">mii gunner</string>
    <string name="character_palutena">palutena</string>
    <string name="character_pac_man">pac-man</string>
    <string name="character_robin">robin</string>
    <string name="character_shulk">shulk</string>
    <string name="character_bowser_jr">bowser jr.</string>
    <string name="character_duck_hunt">duck hunt</string>
    <string name="character_ryu">ryu</string>
    <string name="character_ken">ken</string>
    <string name="character_cloud">cloud</string>
    <string name="character_corrin">corrin</string>
    <string name="character_bayonetta">bayonetta</string>
    <string name="character_inkling">inkling</string>
    <string name="character_ridley">ridley</string>
    <string name="character_simon">simon</string>
    <string name="character_richter">richter</string>
    <string name="character_king_k_rool">king k. rool</string>
    <string name="character_isabelle">isabelle</string>
    <string name="character_incineroar">incineroar</string>
    <string name="character_piranha_plant">piranha plant</string>
    <string name="character_joker">joker</string>
    <string name="character_hero">hero</string>
    <string name="character_banjo_and_kazooie">banjo and kazooie</string>
    <string name="character_terry">terry</string>
    <string name="character_byleth">byleth</string>
    <string name="character_min_min">min min</string>
    <string name="character_steve">steve</string>
    <string name="character_sephiroth">sephiroth</string>
    <string name="character_pyra_and_mythra">pyra and mythra</string>
    <string name="character_kazuya">kazuya</string>
    <string name="character_sora">sora</string>
    <string name="search_character">Search</string>
    <string name="character_random">random</string>

</resources>