<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.GraphFormActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            app:cardBackgroundColor="@color/grey_200"
            app:cardCornerRadius="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/grey_500"
                    app:boxBackgroundColor="@color/grey_200">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/form_title"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:hint="@string/graph_title"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textColor="@color/white" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:textColorHint="@color/grey_500"
                        app:boxBackgroundColor="@color/grey_200">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/form_entrants"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/graph_entrants"
                            android:inputType="number"
                            android:maxLines="1"
                            android:textColor="@color/white" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:textColorHint="@color/grey_500"
                        app:boxBackgroundColor="@color/grey_200">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/form_location"
                            android:layout_width="match_parent"
                            android:layout_height="56dp"
                            android:hint="@string/graph_location"
                            android:inputType="text"
                            android:maxLines="1"
                            android:text="Nantes"
                            android:textColor="@color/white"
                            android:textColorHint="@color/grey_500" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/grey_500"
                    app:boxBackgroundColor="@color/grey_200">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/form_date"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:hint="@string/graph_date"
                        android:inputType="date"
                        android:maxLines="1"
                        android:textColor="@color/white" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginHorizontal="40dp"
            android:background="@color/grey_200" />

        <LinearLayout
            android:id="@+id/form_player_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="24dp"
            android:background="@color/grey_200" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="300dp">

            <Button
                android:id="@+id/form_button_generate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/graph_generate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</ScrollView>